--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,10 @@ Jinja2==3.1.3
 MarkupSafe==2.1.5
 click==8.1.7
 itsdangerous==2.1.2
-gunicorn
 python-dotenv==1.0.1 
+Flask
+gunicorn
+pandas
+numpy
+scikit-learn
+joblib
